JEAP-6178 Show only code deployment types in env overview